2023-02-07  Markus Gans  <guru.mail@muenster.de>
	* Keys are now identified via a hash map to speed up escape sequence 
	  searches

2023-02-04  Markus Gans  <guru.mail@muenster.de>
	* Adapted color reset for st - simple terminal
	* Fixes incorrect key detection caused by duplicate key sequences

2023-01-29  Markus Gans  <guru.mail@muenster.de>
	* Fixed invalid iterator on post-inserting an item in FListView
	* The application will now be notified when the focus changes in 
	  the terminal window, through the new onTermFocusIn() and 
	  onTermFocusOut() event methods
	* New methods removeColumn() and removeAllColumns() for 
	  FListView to remove columns

2023-01-22  Markus Gans  <guru.mail@muenster.de>
	* Fix focus-in and focus-out errors FComboBox and FSpinBox

2023-01-15  Markus Gans  <guru.mail@muenster.de>
	* Speed-up of the update routine for virtual terminal

2023-01-07  Markus Gans  <guru.mail@muenster.de>
	* Accelerated copying of lines with transparent characters

2023-01-05  Markus Gans  <guru.mail@muenster.de>
	* Bugfix for broken scrollbar behavior in FScrollView widget
	* Bugfix for infinite loop on input queue processing on exit

2023-01-04  Markus Gans  <guru.mail@muenster.de>
	* FObject now supports reverse iterators
	* Small improvement of the display speed

2023-01-03  Markus Gans  <guru.mail@muenster.de>
	* The way how a widget gets the focus has been changed. It is now 
	  a single step that includes sending focus events

2022-12-26  Markus Gans  <guru.mail@muenster.de>
	* Incomplete mouse sequences are no longer checked by 
	  the keyboard parser
	* Fixing the conflict between NOT_SET and FKey::Incomplete

2022-12-24  Markus Gans  <guru.mail@muenster.de>
	* Widget flags are now organized in a hierarchical structure

2022-12-14  Markus Gans  <guru.mail@muenster.de>
	* Simplifies the request of the encoding

2022-12-08  Markus Gans  <guru.mail@muenster.de>
	* Fixed the changes on printing of the last full-width character 
	  in a virtual window